--- a/models/EDL_models.ipynb
+++ b/models/EDL_models.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "EDL_models.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNRjQYGus75X/iG1neDVe3S",
+      "authorship_tag": "ABX9TyPthVs6nlK8WP1sHUvyoa1S",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4886,7 +4886,6 @@
       ],
       "metadata": {
         "id": "_WrJK7xLjK9V",
-        "outputId": "baa3ad5a-2ce7-4a3b-ce62-9624472cc68e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 401,
@@ -5024,7 +5023,8 @@
             "09b4b7d00b9d47c79191479cba4b02a9",
             "8499f936f42444a6831b6c229a581859"
           ]
-        }
+        },
+        "outputId": "baa3ad5a-2ce7-4a3b-ce62-9624472cc68e"
       },
       "execution_count": 16,
       "outputs": [
@@ -5413,11 +5413,11 @@
         "print(labels)"
       ],
       "metadata": {
-        "id": "Xesp1wvF8_Iy",
-        "outputId": "73ea7534-2fd3-4fb4-f7f0-c7142d24b192",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Xesp1wvF8_Iy",
+        "outputId": "73ea7534-2fd3-4fb4-f7f0-c7142d24b192"
       },
       "execution_count": 58,
       "outputs": [
@@ -5441,6 +5441,15 @@
       },
       "execution_count": 43,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# NEURAL NETWORK"
+      ],
+      "metadata": {
+        "id": "e6SWRWmVFs3T"
+      }
     },
     {
       "cell_type": "code",
